[package]
name = "realioverse_api"
version = "0.1.0"
edition = "2021"
authors = ["Samuel Dare <samuel@realio.fund>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["full"] }

dotenv = "0.15.0"
ethers = { git = "https://github.com/gakonst/ethers-rs", features = [
    "ws",
    "rustls",
] }
eyre = "0.6.8"
serde_json = "1.0.81"
serde = "1.0.137"
bigdecimal = { version = "0.1.2", default-features = true }
chrono = "0.4"
diesel = { version = "1.4.4", features = [
    "postgres",
    "numeric",
    "num-integer",
    "num-bigint",
    "num-traits",
    "uuidv07",
    "chrono",
    "bigdecimal",
] }
reqwest = "0.11.3"
serde_with = { version = "1.4.0", features = ["json"] }
