[package]
name = "realioverse_api"
version = "0.1.0"
edition = "2021"
authors = ["Samuel Dare <samuel@realio.fund>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["full"] }

dotenv = "0.15.0"
eyre = "0.6.8"
serde_json = "1.0.81"
serde = "1.0.137"
bigdecimal = { version = "0.1.2", default-features = true }
reqwest = { version = "0.11.3", features = ["json", "blocking"] }
serde_with = { version = "1.4.0", features = ["json"] }
derive_more = "0.99.17"
futures = "0.3.15"
hyper = "0.14.9"
